<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:id="@+id/lytContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edtFName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/your_name"
            android:inputType="textCapWords"
            android:padding="7dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edtLName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Ваша фамилия"
            android:inputType="textPostalAddress"
            android:padding="7dp"
            android:textSize="14sp"/>


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:entries="@array/facilities" />


        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="7dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edtOrderList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:gravity="top|left"
            android:hint="@string/order_list"
            android:inputType="textMultiLine"
            android:padding="7dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="7dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="top|left"
            android:hint="@string/add_comment"
            android:inputType="textMultiLine"
            android:padding="7dp"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/header"
            android:text="@string/send_reservation"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>