<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lytContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edtFName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/your_name"
            android:inputType="textCapWords"
            android:padding="7dp"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtLName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Ваша фамилия"
            android:inputType="textPostalAddress"
            android:padding="7dp"
            android:textColor="@color/text"
            android:textSize="14sp" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/secondary"
            android:entries="@array/facilities"
            android:spinnerMode="dropdown" />


        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="7dp"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listCheckout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"
                    android:gravity="top|left"
                    android:padding="7dp"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="7dp"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="top|left"
            android:hint="@string/add_comment"
            android:inputType="textMultiLine"
            android:padding="7dp"
            android:textColor="@color/text"
            android:textSize="14sp" />


    </LinearLayout>

</RelativeLayout>